# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  reformat_dir.py  requirements.txt  setup.cfg  solution.py
2018/: day01.py  day02.py
2018/02/: aoc_02_2018.py
2019/: day01.py  day02.py
2020/: day01.py  day02.py  day05.py  day07.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py
2020/04/: aoc_04_2020.py
2020/11/: aoc_11_2020.py
2020/13/: aoc_13_2020.py
2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day12.py  day13.py  day14.py  day16.py  day17.py  day20.py  day21.py
2021/01/: aoc_01_2021.py
2021/08/: aoc_08_2021.py
2021/09/: aoc_09_2021.py
2021/12/: aoc_12_2021.py
2021/13/: aoc_13_2021.py
2021/14/: aoc_14_2021.py
2021/16/: aoc_16_2021.py
2022/: day01.py  day02.py  day03.py  day05.py
aoc-tools/: .gitignore  .pre-commit-config.yaml  example-report.json  pyproject.toml  requirements.txt  tox.ini
aoc-tools/aoc_tools/: caching.py  main.py  parsing.py  plugins.py  running.py
aoc-tools/aoc_tools/cli/: main.py
aoc-tools/aoc_tools/default_plugins/python/: config.toml  plugin.py  template.txt
aoc-tools/tests/: cli_test.py
plugins/python_default/: _solution_pytester.txt  _solution_template.txt  config.yaml  runner.py
solutions/2017/01/: aoc_01_2017.py
solutions/2017/day01/: solution.py
solutions/2017/day02/: solution.py
solutions/2017/day03/: solution.py
solutions/2017/day04/: solution.py
solutions/2017/day05/: solution.py
solutions/2017/day06/: solution.py
solutions/2017/day07/: solution.py
solutions/2018/01/: aoc_01_2018.py
solutions/2019/02/: aoc_02_2019.py
solutions/2019/day03/: solution.py
solutions/2020/03/: aoc_03_2020.py
solutions/2020/06/: aoc_06_2020.py
solutions/2020/07/: aoc_07_2020.py
solutions/2020/08/: aoc_08_2020.py
solutions/2020/09/: aoc_09_2020.py
solutions/2020/10/: aoc_10_2020.py
solutions/2021/04/: aoc_04_2021.py
solutions/2021/11/: aoc_11_2021.py
solutions/2021/15/: aoc_15_2021.py
solutions/2022/01/: aoc_01_2022.py  aoc_01_2022.rs
solutions/2022/02/: aoc_02_2022.py
solutions/2022/03/: aoc_03_2022.py
solutions/2022/04/: aoc_04_2022.py
solutions/2022/05/: aoc_05_2022.py
solutions/2022/06/: aoc_06_2022.py
solutions/2022/07/: aoc_07_2022.py
solutions/2022/08/: aoc_08_2022.py
solutions/2022/09/: aoc_09_2022.py
solutions/2022/10/: aoc_10_2022.py
solutions/2022/11/: aoc_11_2022.py
solutions/2022/12/: aoc_12_2022.py
solutions/2022/13/: aoc_13_2022.py
solutions/2022/14/: aoc_14_2022.py
tests/: cli_test.py  plugin_registration_test.py
tools/: __init__.py  caching.py  cli.py  main.py  main2.py  parsing.py  plugins.py  response.py  runner.py  running.py  runnner.py  tester.py  utils.py
tools/_assets/: new_day.txt  test_day.txt
(+31 files in other folders)
