[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.2",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "rich>=13.9.4",
    "typer>=0.13.1",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "pre-commit>=4.0.1", "ruff>=0.8.0"]

[project.scripts]
aoc = "tools.cli:app"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["tools"]

[tool.ruff]
line-length = 99

[tool.ruff.lint.per-file-ignores]
"solutions/*" = ["E741"]

[tool.mypy]
packages = "tools"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
