[metadata]
name = advent_of_code
version = 0.1.0
description = Advent of Code solutions and tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbmackenzie/python-advent-of-code
author = Matt Mackenzie
author_email = mbm2228@columbia.edu
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    tools
python_requires = >=3.11

[options.entry_points]
console_scripts =
    aoc = tools.main:main
    aoc2 = tools.main2:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[mypy-requests.*]
disallow_untyped_defs = false

[flake8]
max-line-length = 99
ignore = E203, W503
